k8s/resources/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-service
  namespace: app
spec:
  selector:
    app: app-1
  ports:
    - port: 3000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: app-2-service
  namespace: app
spec:
  selector:
    app: app-2
  ports:
    - port: 3001
  type: NodePort
