k8s/resources/crypto.yaml
# Crypto Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: crypto
  labels:
    name: crypto

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: crypto-server-service
  namespace: crypto
spec:
  selector:
    app: crypto-server
  ports:
    - name: crypto-server
      port: 80
      targetPort: 8080
      nodePort: 32001
  type: LoadBalancer
